--- a/article-getter/manifest.json
+++ b/article-getter/manifest.json
@@ -2,7 +2,7 @@
     "name": "Dev.to Articles",
     "version": "1.1",
     "description": "Check & copy your IP Address anytime",
-    "browser_action": {
+    "action": {
         "default_popup": "article.html",
         "default_icon": {
             "16": "images/logo16.png",
@@ -17,5 +17,5 @@
         "48": "images/logo48.png",
         "128": "images/logo128.png"
     },
-    "manifest_version": 2
+    "manifest_version": 3
 }
